--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="home_text">Início</string>
     <string name="welcome_text">Hal!</string>
     <string name="article_list_title">Lista de Artigos</string>
+    <string name="article_edit_title">Editar Artigo</string>
     <string name="search">Busca</string>
+    <string name="save">Salvar</string>
     <string name="go">GO</string>
+    <string name="artitle_title">Título</string>
+    <string name="url">Url</string>
 </resources>
