ListView with baseAdapter finalized, CR of CRUD also

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="go">GO</string>
     <string name="artitle_title">Título</string>
     <string name="url">Url</string>
+    <string name="example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet erat. </string>
 </resources>
